--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "express": "^4.14.0",
         "express-handlebars": "^3.0.0",
         "express-session": "^1.14.1",
+        "helmet": "^3.16.0",
         "jest": "^24.5.0",
         "redis": "^2.6.2",
         "spiced-pg": "^1.0.0",
